# cumuluse

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.agent/: goal.md  implement.md  plans.md  progress.md  standards.md
.codex/agents/: engineering-pipeline-orchestrator.toml
.codex/skills/engineering-agent-pipeline/: SKILL.md
.codex/skills/engineering-agent-pipeline/references/: stage-manifest.md
.codex/skills/eval-engineering-pipeline-orchestrator/: SKILL.md
.github/workflows/: post-release-to-x.yml
docs/: architecture.md  local-codex-procedure.md  stage-manifest.md  tado-use-analysis.md
examples/vite-basic/: README.md
python/local_agent_panel/: LICENSE  README.md  pyproject.toml
python/local_agent_panel/src/cumuluse_backend/: __init__.py  adapters.py  cli.py  codex_app_server.py  config.py  contracts.py  doctor.py  events.py  ingestion.py  redaction.py  server.py  storage.py  supervisor.py  timeutil.py
python/local_agent_panel/src/local_agent_panel/: __init__.py  adapters.py  cli.py  codex_app_server.py  config.py  contracts.py  doctor.py  events.py  ingestion.py  redaction.py  server.py  storage.py  supervisor.py
python/local_agent_panel/tests/: test_adapters.py  test_cli.py  test_codex_app_server.py  test_cumuluse_backend_imports.py  test_doctor.py  test_events.py  test_redaction.py  test_server.py  test_storage.py
scripts/: post-github-release-to-x.mjs
src/: App.tsx  styles.css  types.ts
src/components/: CodexUsePanel.tsx  Workspace.tsx
src/data/: seed.ts
src/lib/: agentRouter.ts
(+3 files in other folders)
